--- a/home.html
+++ b/home.html
@@ -37,7 +37,14 @@
              </p>
         </main>
 
-        <footer class="mastfoot mt-auto"></footer>
+        <footer class="mastfoot mt-auto">
+            <div class="inner">
+                <p>
+                    "TIC TAC TOE by "
+                    <a href="https://www.facebook.com/yago.huayta.9">@yagohuayta</a>
+                </p>
+            </div>
+        </footer>
     </div>
     <script type="text/javascript" src="tictactoe.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
