Agregar tabla y funcion para validar is un texto se encuentra en una cadena

--- a/2-juego.html
+++ b/2-juego.html
@@ -5,12 +5,37 @@
 </head>
 <body>
     <div>
-        <div></div>
-
-        <div></div>
-
-        <div></div>
+        <table border="1" width="400" height="400" bordercolor="black">
+            <tr>
+                <td>
+                    Columna1
+                </td>
+                <td>
+                    Columna2
+                </td>
+                <td>
+                    columna3
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Columna1
+                </td>
+                <td>Columna2</td>
+                <td>
+                    columna3
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Columna1
+                </td>
+                <td>Columna2</td>
+                <td>
+                    columna3
+                </td>
+            </tr>
+        </table>
     </div>
-
 </body>
 </html>
