--- a/2-juego.html
+++ b/2-juego.html
@@ -1,41 +1,58 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>TIC TAC TOE</title>
+    <script type="text/javascript" src="tictactoe.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
+
 <body>
-    <div>
-        <table border="1" width="400" height="400" bordercolor="black">
-            <tr>
-                <td>
-                    Columna1
-                </td>
-                <td>
-                    Columna2
-                </td>
-                <td>
-                    columna3
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Columna1
-                </td>
-                <td>Columna2</td>
-                <td>
-                    columna3
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Columna1
-                </td>
-                <td>Columna2</td>
-                <td>
-                    columna3
-                </td>
-            </tr>
-        </table>
-    </div>
+
+    <table border="1" bordercolor="black">
+        <tr>
+            <td width="120" height="120">
+                <div id="columna1" class="div100" onclick="columna1();">
+
+                </div>
+            </td>
+            <td width="120" height="120">
+                <div id="columna2" class="div100" onclick="columna2();"></div>
+            </td>
+            <td width="120" height="120">
+                <div id="columna3" class="div100" onclick="columna3();"></div>
+            </td>
+        </tr>
+        <tr>
+            <td width="120" height="120">
+                <div id="columna4" class="div100" onclick="columna4();"></div>
+            </td>
+            <td width="120" height="120">
+                <div id="columna5" class="div100" onclick="columna5();"></div>
+            </td>
+            <td width="120" height="120">
+                <div id="columna6" class="div100" onclick="columna6();"></div>
+            </td>
+        </tr>
+        <tr>
+            <td width="120" height="120">
+                <div id="columna7" class="div100" onclick="columna7();"></div>
+            </td>
+            <td width="120" height="120">
+                <div id="columna8" class="div100" onclick="columna8();"></div>
+            </td>
+            <td width="120" height="120">
+                <div id="columna9" class="div100" onclick="columna9();"></div>
+            </td>
+        </tr>
+    </table>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
