--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
             <p class="lead">
                     The three in line, also known as Ceros y Cruces, three in a row (Spain, Ecuador and Bolivia), Michi (in Peru), cat game, Triqui (in Colombia), Cuadritos, Gato (in Chile and Mexico), Triq ui traka, Equis Zero, Tic-Tac-Toe (in the United States), is a pencil-and-paper game between two players: O and X, which mark the spaces of a 3 × 3 board alternately.</p>
             <p class="lead">
-                        <a href="#" class="btn btn-lg btn-secondary">JUGAR</a>
+                        <a href="2-juego.html" class="btn btn-lg btn-secondary">JUGAR</a>
              </p>
         </main>
 
@@ -46,7 +46,6 @@
             </div>
         </footer>
     </div>
-    <script type="text/javascript" src="tictactoe.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
