--- a/2-juego.html
+++ b/2-juego.html
@@ -46,6 +46,12 @@
             </td>
         </tr>
     </table>
+<br/>
+<div class="inner cover">
+    <p class="lead">
+        <a href="home.html" class="btn btn-lg btn-secondary">HOME</a>
+    </p>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
